src/objects/Dental_Practice__c.object
<CustomObject>
    <fields>
        <fullName>Has_your_perception_of_CC_changed__c</fullName>
        <label>Has your perception of CC changed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes,  you positively impacted my perception</fullName>
                </value>
                <value>
                    <fullName>No,  you haven&apos;t changed my negative feelings</fullName>
                </value>
                <value>
                    <fullName>Maybe,  you guys might not be so bad</fullName>
                </value>
                <value>
                    <fullName>I already liked ClearChoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_provided_communication_training__c</fullName>
        <label>Have you provided communication training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Thinking about it</fullName>
                </value>
                <value>
                    <fullName>Tried training team and it did not help</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_provided_sales_training__c</fullName>
        <label>Have you provided sales training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Thinking about it</fullName>
                </value>
                <value>
                    <fullName>Tried training team and it did not help</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_do_you_market__c</fullName>
        <label>How do you market your practice</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional Referral Marketing</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Television</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Patient Referrals</fullName>
                </value>
                <value>
                    <fullName>Yellow Pages</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Microsite</fullName>
                </value>
                <value>
                    <fullName>Mobilesite</fullName>
                </value>
                <value>
                    <fullName>Seminars</fullName>
                </value>
                <value>
                    <fullName>ValuPak</fullName>
                </value>
                <value>
                    <fullName>Direct Mail Postcard</fullName>
                </value>
                <value>
                    <fullName>Banner Ads</fullName>
                </value>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>Door Drops</fullName>
                </value>
                <value>
                    <fullName>eMail Marketing</fullName>
                </value>
                <value>
                    <fullName>Billboards</fullName>
                </value>
                <value>
                    <fullName>Pay-Per-Click Advertising</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>QR Codes</fullName>
                </value>
                <value>
                    <fullName>Custom APPs</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>You Tube</fullName>
                </value>
                <value>
                    <fullName>Other Social Media</fullName>
                </value>
                <value>
                    <fullName>Reception Room Digital Signage</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Patient Reviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_do_you_thank_referring_patients__c</fullName>
        <label>How do you thank referring patients</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_do_you_track_patient_source__c</fullName>
        <label>How do you track patient source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Front desk asks how they heard about us</fullName>
                </value>
                <value>
                    <fullName>We ask them when they come into the office</fullName>
                </value>
                <value>
                    <fullName>We use call tracking software</fullName>
                </value>
                <value>
                    <fullName>We don&apos;t track at all</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_imp_specialist_do_you_refer_to__c</fullName>
        <label>How many imp specialist do you refer to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_many_implants_do_you_refer_monthly__c</fullName>
        <label>How many implants do you refer monthly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_to_measure_success__c</fullName>
        <label>How to measure success</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_would_patients_rate_team__c</fullName>
        <label>How would patients rate team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_would_patients_rate_the_environment__c</fullName>
        <label>How would patients rate the environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_would_patients_rate_you__c</fullName>
        <label>How would patients rate you</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_would_the_team_rate_environment__c</fullName>
        <label>How would the team rate environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_would_the_team_rate_your_performance__c</fullName>
        <label>How would the team rate your performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_would_you_rank_PP_based_on_tonight__c</fullName>
        <label>How would you rank PP based on tonight?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Dislike</fullName>
                </value>
                <value>
                    <fullName>Dislike</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Like</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_would_you_rank_tonight_s_speaker__c</fullName>
        <label>How would you rank tonight&apos;s speaker?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strongly Dislike</fullName>
                </value>
                <value>
                    <fullName>Dislike</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Liked</fullName>
                </value>
                <value>
                    <fullName>Exceptional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hygiene_Desirability__c</fullName>
        <label>Hygiene Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hygiene__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Services Offered</description>
        <label>Hygiene</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hygienist_1__c</fullName>
        <label>Hygienist (1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hygienist_2__c</fullName>
        <label>Hygienist (2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hygienist_3__c</fullName>
        <label>Hygienist (3)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Companies_Accepted__c</fullName>
        <label>Insurance Companies Accepted</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_in_joining_a_CC_study_club__c</fullName>
        <label>Interest in joining a CC study club</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invisalign_Desirability__c</fullName>
        <label>Invisalign Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invisalign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invisalign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Botox_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Botox a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Crown_Bridge_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Crown &amp; Bridge a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Dental_Implants_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dental Implants a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Dentures_a_Focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dentures a Focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Endontics_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Endontics a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Hygiene_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hygiene a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Invisalign_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Invisalign a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Laser_Dentistry_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Laser Dentistry a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Teeth_Whitening_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Teeth Whitening a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Traditional_Ortho_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Traditional Ortho a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Veneers_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Veneers a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Wisdom_Teeth_Extraction_a_focus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Wisdom Teeth Extraction a focus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_it_HDMI_compatible__c</fullName>
        <label>Is it HDMI compatible?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_your_TV_mounted_to_the_ceiling__c</fullName>
        <label>Is your TV mounted to the ceiling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_your_tv_mounted_to_the_wall__c</fullName>
        <label>Is your tv mounted to the wall</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Laser_Dentistry_Desirability__c</fullName>
        <label>Laser Dentistry Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Laser_Dentistry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laser Dentistry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Referral_Date__c</fullName>
        <description>Stores the date/time that a referral was last sent to this practice.  Used to determine who gets the next referral.</description>
        <label>Last Referral Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Least_effective_marketing_tool__c</fullName>
        <label>Least effective marketing tool</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <description>ClearConnect Location Code Value</description>
        <label>Location Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Measure_for_Patient_Satisfaction__c</fullName>
        <label>Measure for Patient Satisfaction</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_for_Promoting_new_services__c</fullName>
        <label>Method for Promoting new services</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monday_End__c</fullName>
        <label>Monday_End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monday_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the practice is open on Mondays</description>
        <label>Monday Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monday_Start__c</fullName>
        <label>Monday_Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>15:30</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>16:30</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>17:30</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>18:30</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>19:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_effective_marketing_tool__c</fullName>
        <label>Most effective marketing tool</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_active_patients__c</fullName>
        <label>Number of active patients</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under 1000</fullName>
                </value>
                <value>
                    <fullName>1001 to 1999</fullName>
                </value>
                <value>
                    <fullName>2000 to 3000</fullName>
                </value>
                <value>
                    <fullName>3001 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_dormant_patients__c</fullName>
        <label>Number of dormant patients</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under 1000</fullName>
                </value>
                <value>
                    <fullName>1001 to 1999</fullName>
                </value>
                <value>
                    <fullName>2000 to 3000</fullName>
                </value>
                <value>
                    <fullName>3001 or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_has_internet_access__c</fullName>
        <label>Office has internet access?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Days__c</fullName>
        <label>Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Days_of_the_Week</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Time__c</fullName>
        <label>Open Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Half_Hours_AM_PM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oral_and_Maxillofacial_Pathology__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oral and Maxillofacial Pathology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oral_and_Maxillofacial_Radiology__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oral and Maxillofacial Radiology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oral_and_Maxillofacial_Surgery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oral and Maxillofacial Surgery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orthodontics_and_Dentofacial_Orthopedics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orthodontics and Dentofacial Orthopedics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Desirability__c</fullName>
        <label>Other Desirability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Not so Happy</fullName>
                </value>
                <value>
                    <fullName>Can&apos;t wait to go home</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t offer this service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Implants_Restored__c</fullName>
        <label>Other Implants Restored</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Practice_Management_Software__c</fullName>
        <label>Other Practice Management Software</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Services Offered - Not thrilled with the name here</description>
        <label>Other Services Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Contract_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSA Contract Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Effective_Date__c</fullName>
        <label>PSA Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pediatric_Dentistry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pediatric Dentistry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Periodontics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Periodontics</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>